--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 # Auto detect text files and perform LF normalization
-* text=auto
 * text eol=lf
+*.xlsx -text
+*.zip -text
+*.png -text
+*.csv -text
